--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "morgan": "^1.9.1",
     "node-sass-middleware": "^0.11.0",
     "pg": "^6.4.2",
-    "pg-native": "^3.0.0"
+    "pg-native": "^3.0.0",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
+    "jquery": "^3.4.1",
+    "jsdom": "^15.2.1",
     "nodemon": "^1.19.1"
   }
 }
